Autenticación Forzada Eliminada - Rutas Públicas Accesibles
 MIDDLEWARE CREADO PARA RUTAS PÚBLICAS:
- Nuevo middleware.js que permite acceso público a rutas de compartir
- Headers CORS configurados para todas las rutas públicas
- Rutas /receive/* ahora son completamente públicas sin autenticación
- Rutas /api/preview/* accesibles para crawlers de redes sociales

 VERCEL.JSON MEJORADO:
- Headers específicos para rutas de compartir con Cache-Control
- Access-Control-Allow-Origin: * para acceso público
- Configuración de funciones con maxDuration: 30s
- Rewrite específico para /receive/*  /api/receive/*

 .VERCELIGNORE CONFIGURADO:
- API routes NO ignoradas (!api/ !api/**/*.js)
- Archivos públicos NO ignorados (!public/ !public/**/*)
- Middleware NO ignorado (!middleware.js)

 SEGURIDAD MANTENIDA:
- Rutas protegidas (/upload, /history) siguen requiriendo autenticación
- Solo rutas de compartir son públicas
- Headers de seguridad X-Frame-Options, X-XSS-Protection intactos

 RESULTADO ESPERADO:
-  Enlaces de compartir accesibles sin login
-  Meta tags funcionando en redes sociales
-  Autenticación solo requerida para panel de usuario
-  Deploy exitoso sin errores de autenticación

 IMPORTANTE:
Asegúrate de que en Vercel Dashboard:
1. NO tengas 'Password Protection' activado
2. Las variables VITE_SUPABASE_* estén configuradas
3. El proyecto esté en modo público (no privado)

Las rutas públicas ahora serán accesibles sin requerir ningún tipo de autenticación.

--- a/vercel.json
+++ b/vercel.json
@@ -5,11 +5,73 @@
       "destination": "/api/$1"
     },
     {
+      "source": "/receive/(.*)",
+      "destination": "/api/receive/$1"
+    },
+    {
       "source": "/((?!api/).*)",
       "destination": "/index.html"
     }
   ],
   "headers": [
+    {
+      "source": "/receive/(.*)",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=0, must-revalidate"
+        },
+        {
+          "key": "X-Content-Type-Options",
+          "value": "nosniff"
+        },
+        {
+          "key": "X-Frame-Options",
+          "value": "DENY"
+        },
+        {
+          "key": "X-XSS-Protection",
+          "value": "1; mode=block"
+        },
+        {
+          "key": "Access-Control-Allow-Origin",
+          "value": "*"
+        },
+        {
+          "key": "Access-Control-Allow-Methods",
+          "value": "GET, POST, OPTIONS"
+        },
+        {
+          "key": "Access-Control-Allow-Headers",
+          "value": "Content-Type, Authorization"
+        }
+      ]
+    },
+    {
+      "source": "/api/preview/(.*)",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=0, must-revalidate"
+        },
+        {
+          "key": "X-Content-Type-Options",
+          "value": "nosniff"
+        },
+        {
+          "key": "Access-Control-Allow-Origin",
+          "value": "*"
+        },
+        {
+          "key": "Access-Control-Allow-Methods",
+          "value": "GET, OPTIONS"
+        },
+        {
+          "key": "Access-Control-Allow-Headers",
+          "value": "Content-Type, User-Agent"
+        }
+      ]
+    },
     {
       "source": "/(.*)",
       "headers": [
@@ -27,5 +89,13 @@
         }
       ]
     }
-  ]
+  ],
+  "functions": {
+    "api/receive/[fileId].js": {
+      "maxDuration": 30
+    },
+    "api/preview/[fileId].js": {
+      "maxDuration": 30
+    }
+  }
 }
